syntax = "proto3";

package sf.test.v1;

option go_package = "sink-kv/pb/proto;pbtest";

service TestService {
  rpc TestGet(GetTestRequest) returns (Tuple);
  rpc TestGetMany(TestGetManyRequest) returns (Tuples);
  rpc TestPrefix(TestPrefixRequest) returns (Tuples);
  rpc TestScan(TestScanRequest) returns (Tuples);
}

message GetTestRequest {
  string key = 1;
}

message TestGetManyRequest {
  repeated string keys = 1;
}

message TestPrefixRequest {
  string prefix = 1;
  optional int32 limit = 2;
}

message TestScanRequest {
  string start = 1;
  string exclusive_end = 2;
  optional int32 limit = 3 ;
}

message Tuples {
  repeated Tuple pairs = 1;
}

message Tuple {
  string key = 1;
  string value = 2;
}
